--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
             <div class="menu">
                 <ul>
                     <li> <a href="#home">Home</a> </li>
-                    <li> <a target="_blank" href="#clubs">Clubs</a> </li>
-                    <li> <a target="_blank" href="https://www.fifa.com/tournaments/mens/worldcup/qatar2022">World Cup
-                            2022</a> </li>
+                    <li> <a href="#clubs">Clubs</a> </li>
+                    <li> <a href="#worldcup">World Cup 2022</a> </li>
                     <li> <a target="_blank" href="https://www.fifa.com/tournaments/mens/worldcup/qatar2022">Upcoming
                             Matches</a> </li>
                     <li> <a href="#contact">Contact</a> </li>
@@ -40,7 +39,7 @@
             </div>
 
             <div class="login-icon">
-                <a target="_blank" href="https://account.footballnetwork.com.au/" class="cover-button"> <i
+                <a target="_blank" href="https://account.footballnetwork.com.au/" class="nav-button"> <i
                         class="fas fa-sign-in-alt"></i> &nbsp; Login
                 </a>
             </div>
@@ -52,7 +51,7 @@
     <main>
 
         <!-- Cover -->
-        <section class="cover">
+        <section id="home" class="cover">
             <div class="cover-text">
                 <h1>
                     Conmebol <br>
@@ -290,8 +289,8 @@
 
 
         <!-- Country -->
-        <section class="countries">
-            <h1>World Cup 2022 Perticipants</h1>
+        <section id="worldcup" class="countries">
+            <h1>World Cup 2022 Participants</h1>
             <div class="country">
                 <img src="image/country/argentina.png" alt="">
                 <img src="image/country/australia.png" alt="">
@@ -362,20 +361,18 @@
         </div>
 
         <div class="footer-icons">
-            <a target="_blank" href="https://www.instagram.com/explore/tags/football/?hl=en"><i class="fab fa-instagram"></i></a>
+            <a target="_blank" href="https://www.instagram.com/explore/tags/football/?hl=en"><i
+                    class="fab fa-instagram"></i></a>
             <a target="_blank" href="https://dribbble.com/tags/football"><i class="fab fa-dribbble"></i></a>
             <a target="_blank" href="https://twitter.com/football__tweet"><i class="fab fa-twitter"></i></a>
-            <a target="_blank" href="https://www.youtube.com/results?search_query=football"><i class="fab fa-youtube"></i></a>
+            <a target="_blank" href="https://www.youtube.com/results?search_query=football"><i
+                    class="fab fa-youtube"></i></a>
         </div>
 
-        <div class="footer-text">
+        <div id="contact" class="footer-text">
             <p>Copyright &copy; 2022 Football</p>
         </div>
     </footer>
-
-
-
-
 
 </body>
 
